# malBERT

./: .gitignore  README.md  classifier.ipynb  data.pickle  main.ipynb  malberta-runs.csv  opcodes.ipynb  pretrain.ipynb  pyproject.toml
MalBERTa/: tokenizer.json
data/: README.md
notebooks/: analysis.ipynb  attention-attribution.ipynb  cka.ipynb  classifier.ipynb  comparison.ipynb  embeddings.ipynb  model-analysis.ipynb  obfuscation-analysis.ipynb  obfuscation-experiment-files.json  obfuscation-experiment.ipynb  opcodes.ipynb  pretrain-experiment-test.ipynb  pretrain.ipynb  test-infer.ipynb  test.ipynb  utils.py
src/: classifier-sweep.yaml  classifier.py  obfuscation-experiment.py  pretrain-classifier-sweep.yaml  pretrain-sweep.yaml  pretrain.py  utils.py
