[project]
name = "malbert-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.3",
    "memory-profiler>=0.61.0",
    "nbformat>=4.2.0",
    "plotly>=6.1.2",
    "r2pipe>=1.9.4",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "umap-learn>=0.5.7",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    # "ipywidgets>=8.1.6",
]
